--- a/css/main.css
+++ b/css/main.css
@@ -1,20 +1,85 @@
 /* insert you css */
 h1{
     font-family: "Bebas Neue", sans-serif;
-    font-size: 120px;
-    color: white; 
+    font-size: 60px;
+    color: black; 
     text-align: center;
-    border: 50px black solid;
+    margin-top: 50px;
+}
+
+.column {
+    float: left;
+    width: 800px;
+    margin-left: 60px;
+    margin-right: 130px;
+
+    }
+
+.row:after {
+    content:"";
+    display: table;
+    clear: both;
 }
 
 p{
     font-family: "Helvetica Neue", sans-serif;
-    font-size: 20px;
-    font-weight: 300;
-    color:darkgrey;
+    font-size: 27px;
+    font-weight: 400;
+    line-height: 32px;
+    color: black;
     text-align: left;
-    margin-left: 50px;
-    margin-top: 50px;
-    margin-bottom: 50px;
-    margin-right: 50px;
+    margin-top: 40px;
+    margin-bottom: 70px;
+    margin-left: -60px;
 }
+
+p2{
+    font-family: "Helvetica Neue", sans-serif;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 23px;
+    color: black;
+    text-align: left;
+    margin-top: 40px;
+    margin-bottom: 70px;
+    margin-left: -60px;
+}
+
+
+.grow{
+    font-size: 80px;
+    transition: all 1.0s ease-in-out;
+
+}
+
+.grow:hover{
+    font-size: 150px;
+    color: red;
+    
+}
+
+.video{
+    width: 100%;
+    height: 70%;
+    margin-left: -10px;
+
+}
+
+.button {
+    text-align: center;
+    
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
