--- a/css/main.css
+++ b/css/main.css
@@ -65,6 +65,17 @@ p2{
 
 }
 
+
+.gif{
+    max-width: 22%;
+    height: auto;
+    margin-left: 22px;
+    margin-top: 80px;
+
+}
+
+
+
 .button {
     text-align: center;
     
