--- a/css/main.css
+++ b/css/main.css
@@ -21,14 +21,15 @@ h1{
     clear: both;
 }
 
+
 p{
     font-family: "Helvetica Neue", sans-serif;
-    font-size: 27px;
-    font-weight: 400;
-    line-height: 32px;
+    font-size: 24px;
+    font-weight: 350;
+    line-height: 31px;
     color: black;
     text-align: left;
-    margin-top: 40px;
+    margin-top: 70px;
     margin-bottom: 70px;
     margin-left: -60px;
 }
@@ -36,15 +37,41 @@ p{
 p2{
     font-family: "Helvetica Neue", sans-serif;
     font-size: 18px;
-    font-weight: 400;
-    line-height: 23px;
+    font-weight: 300;
+    line-height: 22px;
     color: black;
     text-align: left;
-    margin-top: 40px;
+    margin-top: 80px;
     margin-bottom: 70px;
     margin-left: -60px;
 }
 
+p3{
+    font-family: "Helvetica Neue", sans-serif;
+    font-size: 18px;
+    font-weight:350;
+    line-height: 23px;
+    color: black;
+    text-align: center;
+}
+
+p4{
+    font-family: "Helvetica Neue", sans-serif;
+    font-size: 18px;
+    font-weight:200;
+    line-height: 23px;
+    color: black;
+    text-align: center;
+}
+
+p5{
+    font-family: "Helvetica Neue", sans-serif;
+    font-size: 18px;
+    font-weight:450;
+    line-height: 23px;
+    color: black;
+    text-align: center;
+}
 
 .grow{
     font-size: 80px;
@@ -67,13 +94,12 @@ p2{
 
 
 .gif{
-    max-width: 22%;
+    max-width: 90%;
     height: auto;
-    margin-left: 22px;
-    margin-top: 80px;
+    margin-top: 100px;
+    margin-bottom: 20px;
 
 }
-
 
 
 .button {
