--- a/css/main.css
+++ b/css/main.css
@@ -34,43 +34,51 @@ p{
     margin-left: -60px;
 }
 
-p2{
+.p2{
     font-family: "Helvetica Neue", sans-serif;
     font-size: 18px;
     font-weight: 300;
     line-height: 22px;
     color: black;
-    text-align: left;
+    text-align: right;
     margin-top: 80px;
     margin-bottom: 70px;
     margin-left: -60px;
 }
 
-p3{
+.p3{
     font-family: "Helvetica Neue", sans-serif;
     font-size: 18px;
     font-weight:350;
     line-height: 23px;
     color: black;
-    text-align: center;
+    text-align: left;
+    margin-left: 0px;
+    margin-top: 0px;
+    margin-bottom: -10px;
 }
 
-p4{
+.p4{
     font-family: "Helvetica Neue", sans-serif;
     font-size: 18px;
     font-weight:200;
     line-height: 23px;
     color: black;
-    text-align: center;
+    text-align: left;
+    margin-left: 0px;
+    margin-top: -10px;
 }
 
-p5{
+.p5{
     font-family: "Helvetica Neue", sans-serif;
-    font-size: 18px;
-    font-weight:450;
-    line-height: 23px;
+    font-size: 24px;
+    font-weight: 350;
+    line-height: 31px;
     color: black;
-    text-align: center;
+    text-align: left;
+    margin-top: 40px;
+    margin-bottom: 120px;
+    margin-left: -60px;
 }
 
 .grow{
